[gd_scene load_steps=55 format=2]

[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/RunPick/PlayerRunPick0.png" type="Texture" id=1]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/RunPick/PlayerRunPick1.png" type="Texture" id=2]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/RunPick/PlayerRunPick2.png" type="Texture" id=3]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/RunPick/PlayerRunPick3.png" type="Texture" id=4]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/Idle/PlayerIdlePick0.png" type="Texture" id=5]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/JumpPick/PlayerJumpPick0.png" type="Texture" id=6]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/FallPick/PlayerFallPick0.png" type="Texture" id=7]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/Roll/PlayerRoll0.png" type="Texture" id=8]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/Roll/PlayerRoll1.png" type="Texture" id=9]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/Roll/PlayerRoll2.png" type="Texture" id=10]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/Roll/PlayerRoll3.png" type="Texture" id=11]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/Roll/PlayerRoll4.png" type="Texture" id=12]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/Roll/PlayerRoll5.png" type="Texture" id=13]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/Roll/PlayerRoll6.png" type="Texture" id=14]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/Roll/PlayerRoll7.png" type="Texture" id=15]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/MeleePick/PlayerMeleePick0.png" type="Texture" id=16]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/MeleePick/PlayerMeleePick1.png" type="Texture" id=17]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/MeleePick/PlayerMeleePick2.png" type="Texture" id=18]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/MeleePick/PlayerMeleePick3.png" type="Texture" id=19]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/Hurt/PlayerHurt1.png" type="Texture" id=20]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/Hurt/PlayerHurt0.png" type="Texture" id=21]
[ext_resource path="res://Script/Actor/Player/Player.gd" type="Script" id=22]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/Hurt/PlayerHurt2.png" type="Texture" id=23]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/Hurt/PlayerHurt3.png" type="Texture" id=24]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AerialPick/AerialPick0.png" type="Texture" id=25]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AerialPick/AerialPick1.png" type="Texture" id=26]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AerialPick/AerialPick2.png" type="Texture" id=27]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AerialPick/AerialPick3.png" type="Texture" id=28]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AerialPick/AerialPick4.png" type="Texture" id=29]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AerialPick/AerialPick5.png" type="Texture" id=30]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AerialPick/AerialPick6.png" type="Texture" id=31]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AerialPick/AerialPick7.png" type="Texture" id=32]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AttackBasicUtilt/AttackBasicUtilt3.png" type="Texture" id=33]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AttackBasicUtilt/AttackBasicUtilt2.png" type="Texture" id=34]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AttackBasicUtilt/AttackBasicUtilt4.png" type="Texture" id=35]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AttackBasicUtilt/AttackBasicUtilt1.png" type="Texture" id=36]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AttackBasicUtilt/AttackBasicUtilt0.png" type="Texture" id=37]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AttackBasicUtilt/AttackBasicUtilt5.png" type="Texture" id=38]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AttackBasicUtilt/AttackBasicUtilt6.png" type="Texture" id=39]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AttackBasicPunch/AttackBasicPunch1.png" type="Texture" id=40]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AttackBasicPunch/AttackBasicPunch3.png" type="Texture" id=41]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AttackBasicPunch/AttackBasicPunch0.png" type="Texture" id=42]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AttackBasicPunch/AttackBasicPunch2.png" type="Texture" id=43]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AttackBasicPunch/AttackBasicPunch4.png" type="Texture" id=44]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AttackBasicPunch/AttackBasicPunch5.png" type="Texture" id=45]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AttackBasicPunch/AttackBasicPunch6.png" type="Texture" id=46]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AttackBasicPunch/AttackBasicPunch7.png" type="Texture" id=47]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AttackBasicPunch/AttackBasicPunch8.png" type="Texture" id=48]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AttackBasicPunch/AttackBasicPunch9.png" type="Texture" id=49]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AttackBasicPunch/AttackBasicPunch10.png" type="Texture" id=50]
[ext_resource path="res://Sprite/Player/Alternate - Miner/Animations/AttackBasicPunch/AttackBasicPunch11.png" type="Texture" id=51]
[ext_resource path="res://Scene/HUD/SuperMeter.tscn" type="PackedScene" id=52]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 10 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "StrGround",
"speed": 24.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "Jump",
"speed": 12.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 40 ), ExtResource( 43 ), ExtResource( 41 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ) ],
"loop": true,
"name": "AtkBasicPunch",
"speed": 16.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Fall",
"speed": 12.0
}, {
"frames": [  ],
"loop": true,
"name": "StrAir",
"speed": 24.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 36 ), ExtResource( 34 ), ExtResource( 33 ), ExtResource( 35 ), ExtResource( 38 ), ExtResource( 39 ) ],
"loop": false,
"name": "AtkBasicUtilt",
"speed": 16.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "AtkGround",
"speed": 24.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 20 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "Hurt",
"speed": 12.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Walk",
"speed": 12.0
}, {
"frames": [  ],
"loop": true,
"name": "Run",
"speed": 24.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ) ],
"loop": false,
"name": "AtkBasicSpin",
"speed": 12.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": false,
"name": "Dash",
"speed": 16.0
} ]

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_layer = 16
collision_mask = 16
script = ExtResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -1 )
frames = SubResource( 2 )
animation = "AtkBasicPunch"

[node name="Camera" type="Camera2D" parent="."]
current = true
limit_top = 0
limit_bottom = 352
drag_margin_h_enabled = true
smoothing_enabled = true
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HUD"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="DebugLabel0" type="Label" parent="UI/HUD/VBoxContainer"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_lock_": true
}

[node name="DebugLabel1" type="Label" parent="UI/HUD/VBoxContainer"]
margin_top = 18.0
margin_right = 40.0
margin_bottom = 32.0
__meta__ = {
"_edit_lock_": true
}

[node name="DebugLabel2" type="Label" parent="UI/HUD/VBoxContainer"]
margin_top = 36.0
margin_right = 40.0
margin_bottom = 50.0
__meta__ = {
"_edit_lock_": true
}

[node name="DebugLabel3" type="Label" parent="UI/HUD/VBoxContainer"]
margin_top = 54.0
margin_right = 40.0
margin_bottom = 68.0
__meta__ = {
"_edit_lock_": true
}

[node name="DebugLabel4" type="Label" parent="UI/HUD/VBoxContainer"]
margin_top = 72.0
margin_right = 40.0
margin_bottom = 86.0
__meta__ = {
"_edit_lock_": true
}

[node name="DebugLabel5" type="Label" parent="UI/HUD/VBoxContainer"]
margin_top = 90.0
margin_right = 40.0
margin_bottom = 104.0
__meta__ = {
"_edit_lock_": true
}

[node name="DebugLabel6" type="Label" parent="UI/HUD/VBoxContainer"]
margin_top = 108.0
margin_right = 40.0
margin_bottom = 122.0
__meta__ = {
"_edit_lock_": true
}

[node name="DebugLabel7" type="Label" parent="UI/HUD/VBoxContainer"]
margin_top = 126.0
margin_right = 40.0
margin_bottom = 140.0
__meta__ = {
"_edit_lock_": true
}

[node name="DebugLabel8" type="Label" parent="UI/HUD/VBoxContainer"]
margin_top = 144.0
margin_right = 40.0
margin_bottom = 158.0
__meta__ = {
"_edit_lock_": true
}

[node name="DebugLabel9" type="Label" parent="UI/HUD/VBoxContainer"]
margin_top = 162.0
margin_right = 40.0
margin_bottom = 176.0
__meta__ = {
"_edit_lock_": true
}

[node name="DebugLabel10" type="Label" parent="UI/HUD/VBoxContainer"]
margin_top = 180.0
margin_right = 40.0
margin_bottom = 194.0
__meta__ = {
"_edit_lock_": true
}

[node name="DebugLabel11" type="Label" parent="UI/HUD/VBoxContainer"]
margin_top = 198.0
margin_right = 40.0
margin_bottom = 212.0
__meta__ = {
"_edit_lock_": true
}

[node name="DebugLabel12" type="Label" parent="UI/HUD/VBoxContainer"]
margin_top = 216.0
margin_right = 40.0
margin_bottom = 230.0
__meta__ = {
"_edit_lock_": true
}

[node name="DebugLabel13" type="Label" parent="UI/HUD/VBoxContainer"]
margin_top = 234.0
margin_right = 40.0
margin_bottom = 248.0
__meta__ = {
"_edit_lock_": true
}

[node name="DebugLabel14" type="Label" parent="UI/HUD/VBoxContainer"]
margin_top = 252.0
margin_right = 40.0
margin_bottom = 266.0
__meta__ = {
"_edit_lock_": true
}

[node name="DebugLabel15" type="Label" parent="UI/HUD/VBoxContainer"]
margin_top = 270.0
margin_right = 40.0
margin_bottom = 284.0
__meta__ = {
"_edit_lock_": true
}

[node name="SuperMeter" parent="UI/HUD" instance=ExtResource( 52 )]
margin_left = 8.0
margin_top = 192.0
margin_right = 140.0
margin_bottom = 208.0
